--- a/src/styles/modules/experiment.scss
+++ b/src/styles/modules/experiment.scss
@@ -1,9 +1,12 @@
-.try{
-background-color: red;
+[class*="col-"] {
+     background-color: aqua;
+  //    border: 2px solid black;
+  color: black;
+  //    min-width: 100px;
 }
 
-.black{
-    
-    color:#000;
-    background-color: black;
+.container {
+  height: 100vh;
+  width: 100%;
+  background-color: red;
 }
