--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,9 +1,14 @@
 
+
+@import "../../node_modules/bootstrap/scss/bootstrap";
+@import "../../node_modules/bootstrap/scss/functions";
+@import "../../node_modules/bootstrap/scss/variables";
+@import "../../node_modules/bootstrap/scss/mixins/_breakpoints";
 @import 'vendors/normalize';
 @import 'base/variables.scss';
 @import 'base/mixins.scss';
 @import 'base/global.scss';
-@import 'base/grid.scss';
+// @import 'base/grid.scss';
 @import 'modules/experiment.scss';
 
 
