--- a/src/styles/modules/experiment.scss
+++ b/src/styles/modules/experiment.scss
@@ -1,12 +1,11 @@
 [class*="col-"] {
-     background-color: aqua;
-  //    border: 2px solid black;
-  color: black;
-  //    min-width: 100px;
+    background-color: aqua;
+    color: black;
+    //    min-width: 100px;
 }
 
-.container {
-  height: 100vh;
-  width: 100%;
-  background-color: red;
-}
+// .container {
+//     height: 100vh;
+//     width: 100%;
+//     // background-color: red;
+// }
