--- a/src/styles/base/global.scss
+++ b/src/styles/base/global.scss
@@ -1,25 +1,28 @@
-
 * {
     box-sizing: border-box;
-  }
-  
-  html, body {
+}
+
+html,
+body {
     height: 100%;
-  }
-  
-  body {
+}
+
+body {
     margin: 0;
     padding: 0;
-  }
-  
-  ul, li, a {
+}
+
+ul,
+li,
+a {
     list-style: none;
     text-decoration: none;
     padding: 0;
     margin: 0;
     color: inherit;
-  }
-  
-  a, button {
+}
+
+a,
+button {
     cursor: pointer;
-  }
+}
