--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,9 +1,5 @@
-
-@import 'vendors/normalize';
 @import 'base/variables.scss';
 @import 'base/mixins.scss';
 @import 'base/global.scss';
-@import 'base/grid.scss';
+@import 'base/layout.scss';
 @import 'modules/experiment.scss';
-
-
