vendors js working

--- a/src/styles/modules/experiment.scss
+++ b/src/styles/modules/experiment.scss
@@ -1,6 +1,6 @@
 [class*="col-"] {
-    background-color: aqua;
-    color: black;
+    background-color: blue;
+    color: #fff;
     //    min-width: 100px;
 }
 
