--- a/src/styles/modules/experiment.scss
+++ b/src/styles/modules/experiment.scss
@@ -1,8 +1,32 @@
-[class*="col-"] {
-    background-color: blue;
-    color: #fff;
-    //    min-width: 100px;
+* { /* global font */
+    font-family: Verdana;
+    font-size: 18px;
 }
+#root { display: flex; flex-direction: row; }
+#content { display: flex;
+    display: block;
+    width: 800px;
+    height: 250px;
+    /* vertically centered text */
+    line-height: 250px;
+    border: 2px solid #555;
+    margin: 32px;
+    text-align: center;
+}
+.route {
+    cursor: pointer;
+    justify-content: center;
+    width: 150px;
+    height: 50px;
+    /* vertically centered text */
+    line-height: 50px;
+    position: relative;
+    border: 2px solid #555;
+    background: white;
+    text-align: center;
+    margin: 16px;
+}
+.route.selected { background: yellow; }
 
 // .container {
 //     height: 100vh;
